crates/bonsaidb-macros/tests/ui/schema/invalid_attribute.stderr
error: expected identifier
 --> tests/ui/schema/invalid_attribute.rs:5:25
  |
5 | #[schema(name = "name", "hi")]
  |                         ^^^^

error: Only `name = \"name\"`, `authority = \"authority\"`, `collections = [SomeCollection, AnotherCollection]` and `core = bonsaidb::core` are supported attributes
 --> tests/ui/schema/invalid_attribute.rs:9:25
  |
9 | #[schema(name = "name", test = "hi")]
  |                         ^^^^
